--- a/public/locales/it/translation.json
+++ b/public/locales/it/translation.json
@@ -6,8 +6,8 @@
   },
   "packages": {
     "title": "Pacchetti Estate",
-    "base": "Base",
-    "premium": "Premium",
+    "base": "Folle",
+    "premium": "Folle",
     "folle": "Folle",
     "description": "Descrizione",
     "bookNow": "Prenota ora",
